# AgentClaude

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Last Prompt 21.07.docx  PIPELINE_VALIDATION.md  README.md  pdf_reader.py  run_tests.py  simple_test.py
.claude/: settings.local.json
.kiro/specs/real-time-observability-dashboard/: design.md  requirements.md  tasks.md
agent-projects/: README.md  SETUP_COMPLETE.md
agent-projects/data-science-analytics/: README.md  pyproject.toml  requirements.txt
agent-projects/data-science-analytics/.claude/: settings.json
agent-projects/devops-infrastructure/: Dockerfile  README.md  package.json
agent-projects/devops-infrastructure/.claude/: settings.json
agent-projects/web-ecommerce-platform/: README.md  package.json
agent-projects/web-ecommerce-platform/.claude/: settings.json
apps/data-processing/: jest.config.js  package-lock.json  package.json  tsconfig.json
apps/data-processing/src/: database.ts  index.ts  init-db.ts  types.ts
apps/data-processing/tests/: database.integration.test.ts  database.test.ts  server.integration.test.ts  setup.ts  websocket.integration.test.ts
apps/data-processing/tests/types/: global.d.ts
apps/event-capture/: package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  send_event.py  setup.py
apps/event-capture/.claude/: settings.json
apps/event-capture/hooks/: notification.py  post_tool_use.py  pre_tool_use.py  stop.py  subagent_stop.py  user_prompt_submit.py
apps/event-capture/tests/: conftest.py  test_event_sender.py  test_pre_tool_use.py  test_send_event.py
apps/observability-dashboard/: .env.example  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/observability-dashboard/src/: App.vue  main.ts
apps/observability-dashboard/src/assets/styles/: main.scss  variables.scss
apps/observability-dashboard/src/components/: AgentStatusGrid.vue  MetricCard.vue  Navigation.vue  RealtimeEventList.vue
apps/observability-dashboard/src/components/charts/: ActivityTimelineChart.vue  EventTypeChart.vue
apps/observability-dashboard/src/router/: index.ts
apps/observability-dashboard/src/services/: api.ts  websocket.ts
apps/observability-dashboard/src/stores/: observability.ts  theme.ts
apps/observability-dashboard/src/types/: index.ts
apps/observability-dashboard/src/views/: AgentsView.vue  AnalyticsView.vue  DashboardView.vue  EventsView.vue  NotFoundView.vue  SettingsView.vue
tests/integration/: test_multi_agent_pipeline.py
