[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-analytics"
version = "1.0.0"
description = "Financial market analysis and anomaly detection - Claude Agent Demo"
authors = [
    {name = "Claude Data Science Agent", email = "agent@claude.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["finance", "machine-learning", "anomaly-detection", "time-series"]

dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.2",
    "jupyter>=1.0.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.11.0",
    "mypy>=1.7.1"
]
ml = [
    "xgboost>=2.0.2",
    "lightgbm>=4.1.0",
    "prophet>=1.1.5",
    "mlflow>=2.8.1"
]
viz = [
    "plotly>=5.17.0",
    "seaborn>=0.13.0",
    "altair>=5.2.0"
]

[project.urls]
Homepage = "https://github.com/claude-agents/financial-analytics"
Repository = "https://github.com/claude-agents/financial-analytics.git"
Documentation = "https://docs.claude-agents.ai/financial-analytics"
"Bug Tracker" = "https://github.com/claude-agents/financial-analytics/issues"

[project.scripts]
collect-data = "scripts.data_collector:main"
train-model = "models.train:main"
run-analysis = "analysis.market_analysis:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "models*", "analysis*", "monitoring*"]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require external API calls",
    "gpu: marks tests that require GPU"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "notebooks"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["notebooks/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "alpha_vantage.*",
    "finnhub.*",
    "plotly.*",
    "seaborn.*"
]
ignore_missing_imports = true

# Claude Agent Configuration
[tool.claude_agent]
agent_id = "data-science-agent"
project_type = "data_analysis"
tech_stack = ["python", "jupyter", "pandas", "scikit-learn", "mlflow"]
primary_tasks = [
    "data_collection",
    "feature_engineering", 
    "model_training",
    "statistical_analysis",
    "visualization",
    "research_notebooks"
]
data_sources = ["yahoo_finance", "alpha_vantage", "economic_apis"]
model_types = ["time_series", "anomaly_detection", "classification", "regression"]